build/JWTKey: add exception